--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,21 +10,68 @@
   </head>
   <body>
     <%# application layout styled for Bootstrap 2.3 %>
-    <header>
-      <%= render 'layouts/navigation' %>
-    </header>
     <main role="main">
       <div class="container">
-        <div class="content">
-           <div class="row">
-            <div class="span12">
-              <%= render 'layouts/messages' %>
-              <%= yield %>
+      <div class="masthead">
+        <h3 class="muted">Конференция АНТОК в Екатеринбурге, июль 2014</h3>
+        <div class="navbar">
+          <div class="navbar-inner">
+            <div class="container">
+              <ul class="nav">
+                <li><%= link_to 'Главная', root_path %></li>
+                <li><a href="#">О Конференции</a></li>
+                <li><a href="#">Программа</a></li>
+                <li><a href="#">Размещение</a></li>
+                <li><a href="#">Спонсоры</a></li>
+                <% if user_signed_in? %>
+                <li><%= link_to 'Выход', destroy_user_session_path, :method=>'delete' %></li>
+                <% else %>
+                <li><%= link_to 'Вход', new_user_session_path %></li>
+                <% end %>
+              </ul>
             </div>
           </div>
-          <footer>
-          </footer>
+        </div><!-- /.navbar -->
+      </div>
+
+      <!-- Jumbotron -->
+      <div class="jumbotron">
+        <h1>Добро пожаловать на конференцию АНТОК-2014 в Екатеринбург!</h1>
+        <p class="lead">Конференция АНТОК-2014 по науке и технике объединяет инженеров и ученых из всей России а также Кореи, с целью обсудить последние достижения и будущие тенденции в науке и технике. АНТОК-2014 пройдет в Екатеринбурге в июле 2014г.</p>
+        <a class="btn btn-large btn-success" href="#">Зарегистрироваться</a>
+      </div>
+
+      <hr>
+
+      <!-- Example row of columns -->     
+      <div class="row-fluid">
+        <div class="span4">
+          <h3>Глобальное потепление</h3>
+          <p>Доклад профессора Иванова из МГУ по вопросам глобального потепления. Станет ли Сибирь Африкой?</p>
+          <p><a class="btn" href="#">Подробности &raquo;</a></p>
         </div>
+        <div class="span4">
+          <h3>Куда падают метеориты</h3>
+          <p>Доклад профессора Петрова из Забайкальского госуниверситета. Как получить сувенир в виде метеорита? Астрономические расчеты.</p>
+          <p><a class="btn" href="#">Подробности &raquo;</a></p>
+       </div>
+        <div class="span4">
+          <h3>Куда уезжают люди</h3>
+          <p>Доклад доцента кафедры Новосибирского госуниверситета. О миграционных циклах на планете</p>
+          <p><a class="btn" href="#">Подробности &raquo;</a></p>
+        </div>
+      </div>
+       <div class="row">
+        <div class="span12">
+          <%= render 'layouts/messages' %>
+          <%= yield %>
+        </div>
+      </div> 
+      <hr>
+
+      <div class="footer">
+        <p>&copy; <a href="http://www.aksts.ru">www.aksts.ru</a> 2014</p>
+      </div>
       </div>
     </main>
   </body>
