--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,10 @@
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
   </head>
-  <body>
+  <body> 
     <%# application layout styled for Bootstrap 2.3 %>
     <main role="main">
-      <div class="container">
+      <div class="container">          
       <div class="masthead">
         <h3 class="muted">Конференция АНТОК в Екатеринбурге, июль 2014</h3>
         <div class="navbar">
@@ -19,10 +19,10 @@
             <div class="container">
               <ul class="nav">
                 <li><%= link_to 'Главная', root_path %></li>
-                <li><a href="#">О Конференции</a></li>
-                <li><a href="#">Программа</a></li>
-                <li><a href="#">Размещение</a></li>
-                <li><a href="#">Спонсоры</a></li>
+                <li><a href="/about">О Конференции</a></li>
+                <li><a href="/programme">Программа</a></li>
+                <li><a href="/hotel">Размещение</a></li>
+                <li><a href="/sponsors">Спонсоры</a></li>
                 <% if user_signed_in? %>
                 <li><%= link_to 'Выход', destroy_user_session_path, :method=>'delete' %></li>
                 <% else %>
@@ -34,71 +34,9 @@
         </div><!-- /.navbar -->
       </div>
 
-      <!-- Jumbotron -->
-      <div class="jumbotron">
-        <h1>Добро пожаловать на конференцию АНТОК-2014 в Екатеринбург!</h1>
-        <p class="lead">Конференция АНТОК-2014 по науке и технике объединяет инженеров и ученых из всей России а также Кореи, с целью обсудить последние достижения и будущие тенденции в науке и технике. АНТОК-2014 пройдет в Екатеринбурге в июле 2014г.</p>
-            <div class="my1">
-            <div id="myCarousel" class="carousel slide">
-                <ol class="carousel-indicators">
-                  <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                  <li data-target="#myCarousel" data-slide-to="1" class=""></li>
-                  <li data-target="#myCarousel" data-slide-to="2" class=""></li>
-                </ol>
-                <div class="carousel-inner">
-                  <div class="item active">
-                    <%= image_tag("slide-image-1.jpg", alt: "") %>
-                    <div class="carousel-caption">
-                      <p>Конференция АНТОК-2011, Звенигород</p>
-                    </div>
-                  </div>
-                  <div class="item">
-                    <%= image_tag("slide-image-2.jpg", alt: "") %>
-                    <div class="carousel-caption">
-                      <p>Этническая корейская научная конференция, Сеул, 2012</p>
-                    </div>
-                  </div>
-                  <div class="item">
-                    <%= image_tag("slide-image-3.jpg", alt: "") %>
-                    <div class="carousel-caption">
-                      <p>Конференция АНТОК-2013, Новосибирск</p>
-                    </div>
-                  </div>
-                </div>
-                <a class="left carousel-control" href="#myCarousel" data-slide="prev">‹</a>
-                <a class="right carousel-control" href="#myCarousel" data-slide="next">›</a>
-              </div>
-            </div>
-        <a class="btn btn-large btn-success" href="#">Зарегистрироваться</a>
-      </div>
+      <%= render 'layouts/messages' %>
+      <%= yield %> 
 
-      <hr>
-
-      <!-- Example row of columns -->     
-      <div class="row-fluid">
-        <div class="span4">
-          <h3>Глобальное потепление</h3>
-          <p>Доклад профессора Иванова из МГУ по вопросам глобального потепления. Станет ли Сибирь Африкой?</p>
-          <p><a class="btn" href="#">Подробности &raquo;</a></p>
-        </div>
-        <div class="span4">
-          <h3>Куда падают метеориты</h3>
-          <p>Доклад профессора Петрова из Забайкальского госуниверситета. Как получить сувенир в виде метеорита? Астрономические расчеты.</p>
-          <p><a class="btn" href="#">Подробности &raquo;</a></p>
-       </div>
-        <div class="span4">
-          <h3>Куда уезжают люди</h3>
-          <p>Доклад доцента кафедры Новосибирского госуниверситета. О миграционных циклах на планете</p>
-          <p><a class="btn" href="#">Подробности &raquo;</a></p>
-        </div>
-      </div>
-       <div class="row">
-        <div class="span12">
-          <%= render 'layouts/messages' %>
-          <%= yield %>
-        </div>
-      </div> 
-      <hr>
 
       <div class="footer">
         <p>&copy; <a href="http://www.aksts.ru">www.aksts.ru</a> 2014</p>
