--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -33,7 +33,8 @@
                 <a class="right carousel-control" href="#myCarousel" data-slide="next">›</a>
               </div>
             </div>
-        <a class="btn btn-large btn-success" href="#">Зарегистрироваться</a>
+        <br/>    
+        <a class="btn btn-large btn-success" href="#">Регистрация будет открыта 1 марта</a>
       </div>
 
       <hr>
