add applics model

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -34,7 +34,7 @@
               </div>
             </div>
         <br/>    
-        <a class="btn btn-large btn-success" href="#">Регистрация будет открыта 1 марта</a>
+        <%= link_to "Регистрация будет открыта 1 марта", new_user_registration_path, class: "btn btn-large btn-success"%>
       </div>
 
       <hr>
