--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,14 +1,15 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h2>Редактировать аккаунт</h2>
 <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put, :class => 'form-vertical' }) do |f| %>
   <%= f.error_notification %>
   <%= display_base_errors resource %>
   <%= f.input :name, :autofocus => true %>
+  <%= f.input :is_antok_member, :as => :boolean %>
   <%= f.input :email, :required => true %>
-  <%= f.input :password, :autocomplete => "off", :hint => "leave it blank if you don't want to change it", :required => false %>
+  <%= f.input :password, :autocomplete => "off", :hint => "оставьте пустым если не хотите изменять", :required => false %>
   <%= f.input :password_confirmation, :required => false %>
-  <%= f.input :current_password, :hint => "we need your current password to confirm your changes", :required => true %>
-  <%= f.button :submit, 'Update', :class => 'btn-primary' %>
+  <%= f.input :current_password, :hint => "нужен текущий пароль, чтобы сохранить изменения", :required => true %>
+  <%= f.button :submit, 'Сохранить', :class => 'btn-primary' %>
 <% end %>
-<h3>Cancel my account</h3>
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %>.</p>
-<%= link_to "Back", :back %>
+<h3>Удалить аккаунт</h3>
+<p>Несчастны? <%= link_to "Удилить мой аккаунт", registration_path(resource_name), :data => { :confirm => "Вы уверены?" }, :method => :delete %>.</p>
+<%= link_to "Назад", :back %>
