--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,11 +1,12 @@
-<h2>Sign up</h2>
+<h2>Регистрация</h2>
 <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:class => 'form-vertical' }) do |f| %>
   <%= f.error_notification %>
   <%= display_base_errors resource %>
-  <%= f.input :name, :autofocus => true %>
+  <%= f.input :name, :autofocus => true, :required => true %>
+  <%= f.input :is_antok_member, :as => :boolean %>
   <%= f.input :email, :required => true %>
   <%= f.input :password, :required => true %>
   <%= f.input :password_confirmation, :required => true %>
-  <%= f.button :submit, 'Sign up', :class => 'btn-primary' %>
+  <%= f.button :submit, 'Зарегистрироваться', :class => 'btn-primary' %>
 <% end %>
 <%= render "devise/shared/links" %>
