--- a/app/views/applics/new.html.erb
+++ b/app/views/applics/new.html.erb
@@ -1,3 +1,8 @@
-<% provide(:title, 'Заполнение заявки на конкурс грантов') %>
-<h1>Заполнение заявки на конкурс грантов</h1>
+<% provide(:title, 'Заполнение заявки на конференцию') %>
+<h1>Заполнение заявки на конференцию</h1>
+<% if antok_member? %>
+  <p>Сокращенная форма анкеты для члена АНТОК</p>
+<% else %>
+  <p>Расширенная форма анкеты для НЕ члена АНТОК</p>
+<% end %>
 <%= render 'form' %>
