--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -1,3 +1,7 @@
 // import the CSS framework
 @import "bootstrap";
 //@import "bootstrap-responsive";
+
+input, textarea, .uneditable-input {
+width: 500px;
+}
