--- a/app/views/applics/_form.html.erb
+++ b/app/views/applics/_form.html.erb
@@ -4,26 +4,34 @@
       <%= render 'shared/error_messages', object: f.object %>
       <h3>Персональная информация</h3>
       <%= f.label :fio %><%= f.text_field :fio %>
-      <%= f.label :fio_eng %><%= f.text_field :fio_eng %>      
-      <%= f.label :birth_date %><%= f.text_field :birth_date %>     
-      <%= f.label :sex %><%= f.text_field :sex %>   
-      <%= f.label :post_address %><%= f.text_field :post_address %>
+      <% if not_antok_member? %>
+        <%= f.label :fio_eng %><%= f.text_field :fio_eng %>      
+        <%= f.label :birth_date %><%= f.text_field :birth_date %>     
+        <%= f.label :sex %><%= f.text_field :sex %>   
+        <%= f.label :post_address %><%= f.text_field :post_address %>
+      <% end %>
       <%= f.label :email %><%= f.text_field :email %>
       <%= f.label :phones %><%= f.text_field :phones %>   
-      <h3>Образование</h3>            
-      <%= f.label :edu_institute %><%= f.text_field :edu_institute %>  
-      <%= f.label :edu_institute_address %><%= f.text_field :edu_institute_address %>      
-      <%= f.label :edu_specialization %><%= f.text_field :edu_specialization %>  
+      <h3>Образование</h3>    
+      <% if not_antok_member? %>              
+        <%= f.label :edu_institute %><%= f.text_field :edu_institute %>  
+        <%= f.label :edu_institute_address %><%= f.text_field :edu_institute_address %>      
+        <%= f.label :edu_specialization %><%= f.text_field :edu_specialization %>  
+      <% end %>
       <%= f.label :uch_stepen %><%= f.text_field :uch_stepen %>
-      <h3>Работа</h3>
+      <h3>Место работы</h3>      
       <%= f.label :work_company %><%= f.text_field :work_company %>
-      <%= f.label :work_start_year %><%= f.text_field :work_start_year %>
-      <%= f.label :work_department %><%= f.text_field :work_department %>
+      <% if not_antok_member? %>      
+        <%= f.label :work_start_year %><%= f.text_field :work_start_year %>
+        <%= f.label :work_department %><%= f.text_field :work_department %>
+        <%= f.label :work_specialization %><%= f.text_field :work_specialization %>
+      <% end %>
       <%= f.label :work_position %><%= f.text_field :work_position %>
-      <%= f.label :work_specialization %><%= f.text_field :work_specialization %>
       <h3>Дополнительная информация</h3>
       <%= f.label :antok_city %><%= f.text_field :antok_city %>
-      <%= f.label :public_organizations %><%= f.text_field :public_organizations %>
+      <% if not_antok_member? %>       
+        <%= f.label :public_organizations %><%= f.text_field :public_organizations %>
+      <% end %>  
       <h3>Заявка на конференцию</h3>
       <%= f.label :science_interests %><%= f.text_field :science_interests %>
       <%= f.label :conf_topic %><%= f.text_field :conf_topic %>
