add antok id, errors css

--- a/app/views/applics/new.html.erb
+++ b/app/views/applics/new.html.erb
@@ -1,8 +1,11 @@
 <% provide(:title, 'Заполнение заявки на конференцию') %>
 <h1>Заполнение заявки на конференцию</h1>
 <% if antok_member? %>
-  <p>Сокращенная форма анкеты для члена АНТОК</p>
+  <p>( Сокращенная форма анкеты для члена АНТОК )</p>
 <% else %>
-  <p>Расширенная форма анкеты для НЕ члена АНТОК</p>
+  <p>( Расширенная форма анкеты для НЕ члена АНТОК )</p>
 <% end %>
+<div class="alert alert-info">
+  <b>Шаг 2 из 2</b>: На данном шаге заполняется ваша заявка
+</div>
 <%= render 'form' %>
