--- a/app/views/applics/_form.html.erb
+++ b/app/views/applics/_form.html.erb
@@ -38,7 +38,7 @@
       <%= f.label :conf_section %><%= f.text_field :conf_section %>
       <%= f.label :conf_coauthors %><%= f.text_field :conf_coauthors %>
       <%= f.label :participation_type %><%= f.text_field :participation_type %>
-       <div class="alert">
+       <div class="alert alert-info">
          <button type="button" class="close" data-dismiss="alert">&times;</button>
            Перед тем как сохранить, проверьте правильность внесенных данных. После сохранения анкеты, внести изменения будет не возможно.
        </div>
