--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
       <!-- Jumbotron -->
       <div class="jumbotron">
         <% if user_signed_in? %>
-          <%= link_to "Подать заявку", new_applic_path, class: "btn btn-large btn-success"%>
+          <%= link_to "Подать заявку (шаг 2)", new_applic_path, class: "btn btn-large btn-success"%>
         <% end %>
         <h1>Добро пожаловать на конференцию АНТОК-2014 в Екатеринбург!</h1>
         <p class="lead">В конференции АНТОК-2014 могут принять участие все желающие, в том числе члены научно-технических обществ корейцев России, а также стран СНГ, Европейского союза и Кореи. Программа конференции предусматривает возможность участия в ней специалистов из разных областей науки и техники. На конференции они смогут обсудить результаты последних научных и технологических разработок. Конференция состоится в Екатеринбурге в июле 2014 г.</p>
