--- a/app/views/applics/new.html.erb
+++ b/app/views/applics/new.html.erb
@@ -3,7 +3,7 @@
 <% if antok_member? %>
   <p>( Сокращенная форма анкеты для члена АНТОК )</p>
 <% else %>
-  <p>( Расширенная форма анкеты для НЕ члена АНТОК )</p>
+  <p>( Расширенная форма анкеты для не членов АНТОК )</p>
 <% end %>
 <div class="alert alert-info">
   <b>Шаг 2 из 2</b>: На данном шаге заполняется ваша заявка
