--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,9 +1,8 @@
 <%# Rails flash messages styled for Bootstrap 2.3 %>
-<% flash.each do |name, msg| %>
-  <% if msg.is_a?(String) %>
-    <div class="alert alert-<%= name == :notice ? "success" : "error" %>">
-      <a class="close" data-dismiss="alert">&times;</a>
-      <%= content_tag :div, msg, :id => "flash_#{name}" %>
-    </div>
-  <% end %>
+
+<% flash.each do |key, value| %>
+<div class="alert alert-<%= key %>">
+	<a class="close" data-dismiss="alert">&times;</a>
+	<%= value %>
+</div>
 <% end %>
