--- a/app/views/applics/new.html.erb
+++ b/app/views/applics/new.html.erb
@@ -6,6 +6,6 @@
   <p>( Расширенная форма анкеты для не членов АНТОК )</p>
 <% end %>
 <div class="alert alert-info">
-  <b>Шаг 2 из 2</b>: На данном шаге заполняется ваша заявка
+  <b>Шаг 2 из 2</b>: Подача заявки на участие в конференции
 </div>
 <%= render 'form' %>
