new button title

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -43,7 +43,7 @@
             </div>
         <br/>    
         <% if !user_signed_in? %>
-        <%= link_to "Регистрация будет открыта 1 марта", new_user_registration_path, class: "btn btn-large btn-success"%>
+        <%= link_to "Зарегистрироваться", new_user_registration_path, class: "btn btn-large btn-success"%>
         <% end %>
       </div>
 
