--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -47,9 +47,10 @@
         <% end %>
       </div>
 
+      <!-- Example row of columns  
       <hr>
 
-      <!-- Example row of columns -->     
+         
       <div class="row-fluid">
         <div class="span4">
           <h3>Глобальное потепление</h3>
@@ -66,7 +67,7 @@
           <p>Доклад доцента кафедры Новосибирского госуниверситета. О миграционных циклах на планете</p>
           <p><a class="btn" href="#">Подробности &raquo;</a></p>
         </div>
-      </div>
+      </div> --> 
        <div class="row">
         <div class="span12">
 
