add busation to footer

--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -2,6 +2,8 @@
 @import "bootstrap";
 //@import "bootstrap-responsive";
 
+$grayMediumLight: #eaeaea;
+
 input, textarea, .uneditable-input {
 width: 500px;
 }
@@ -17,4 +19,30 @@ width: 500px;
 .field_with_errors {
   @extend .control-group;
   @extend .error;
+}
+
+/* footer */
+
+footer {
+  margin-top: 45px;
+  padding-top: 5px;
+  border-top: 1px solid $grayMediumLight;
+  color: $grayLight;
+  a {
+    color: $gray;
+    &:hover {
+      color: $grayDarker;
+    }
+  }
+  small {
+    float: left;
+  }
+  ul {
+    float: right;
+    list-style: none;
+    li {
+      float: left;
+      margin-left: 10px;
+    }
+  }
 }
