--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,11 +37,14 @@
       <%= render 'layouts/messages' %>
       <%= yield %> 
 
-
-      <div class="footer">
-        <hr/>
-        <p>&copy; <a href="http://www.aksts.ru">www.aksts.ru</a> 2014</p>
-      </div>
+      <footer class="footer">
+          &copy; <a href="http://www.aksts.ru">www.aksts.ru</a> 2014
+        <nav>
+          <ul>
+            <li>Разработка сайта <a href="http://www.busation.com/">@busation</a></li>
+          </ul>
+        </nav>
+      </footer>       
       </div>
     </main>
     <script type='text/javascript'>
