add download all applics to csv xls

--- a/app/views/applics/index.html.slim
+++ b/app/views/applics/index.html.slim
@@ -1,4 +1,5 @@
 h1#h1_all_applics Поданные заявки
+p Скачать все анкеты: #{link_to "Excel", applics_path(format: "xls")} | #{link_to "CSV", applics_path(format: "csv")}
 table class="table table-striped"
   tr
     th №
