--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,17 @@
     <main role="main">
       <div class="container">          
       <div class="masthead">
-        <h3 class="muted">Конференция АНТОК в Екатеринбурге, июль 2014</h3>
+        <div class="site-name">
+          <h3 class="muted">Конференция АНТОК в Екатеринбурге, июль 2014</h3>
+        </div>
+        <div class="lang_box">
+          <div class="lang1">
+            <%= link_to image_tag("ru.png", alt: ""), '/?locale=ru', title: "Переключиться на Русский" %>
+          </div>
+          <div class="lang2">
+            <%= link_to image_tag("en.png", alt: ""), '/?locale=en', title: "Switch to English" %>
+          </div>
+        </div>
         <div class="navbar">
           <div class="navbar-inner">
             <div class="container">
