--- a/app/views/applics/_form.html.erb
+++ b/app/views/applics/_form.html.erb
@@ -2,7 +2,7 @@
   <div class="span8 offset2 applic-form">
     <%= form_for(@applic) do |f| %>
       <%= render 'shared/error_messages', object: f.object %>
-      <h3>Персональная информация</h3>
+      <h3><%= t(:personal_info) %></h3>
       <%= f.label :fio %><%= f.text_field :fio %>
       <% if not_antok_member? %>
         <%= f.label :fio_eng %><%= f.text_field :fio_eng %>      
@@ -13,14 +13,14 @@
       <% end %>
       <%= f.label :email %><%= f.text_field :email %>
       <%= f.label :phones %><%= f.text_field :phones %>   
-      <h3>Образование</h3>    
+      <h3><%= t(:education) %></h3>    
       <% if not_antok_member? %>              
         <%= f.label :edu_institute %><%= f.text_field :edu_institute %>  
         <%= f.label :edu_institute_address %><%= f.text_field :edu_institute_address %>      
         <%= f.label :edu_specialization %><%= f.text_field :edu_specialization %>  
       <% end %>
       <%= f.label :uch_stepen %><%= f.text_field :uch_stepen %>
-      <h3>Место работы</h3>      
+      <h3><%= t(:work) %></h3>      
       <%= f.label :work_company %><%= f.text_field :work_company %>
       <% if not_antok_member? %>      
         <%= f.label :work_start_year %><%= f.text_field :work_start_year %>
@@ -28,13 +28,13 @@
         <%= f.label :work_specialization %><%= f.text_field :work_specialization %>
       <% end %>
       <%= f.label :work_position %><%= f.text_field :work_position %>
-      <h3>Дополнительная информация</h3>
+      <h3><%= t(:additional_info) %></h3>
       <%= f.label :antok_city %><%= f.select :antok_city, 
           options_for_select(["","Москва", "Воронеж", "Екатеринбург", "Новосибирск", "Красноярск", "Дальний Восток"], :selected=> @applic.antok_city) %>
       <% if not_antok_member? %>       
         <%= f.label :public_organizations %><%= f.text_field :public_organizations %>
       <% end %>  
-      <h3>Заявка на конференцию</h3>
+      <h3><%= t(:applicaion_info) %></h3>
       <%= f.label :science_interests %><%= f.text_area :science_interests, rows: 5 %>
       <%= f.label :conf_topic %><%= f.text_field :conf_topic %>
       <%= f.label :conf_section %><%= f.select :conf_section, 
@@ -44,10 +44,10 @@
           options_for_select(["","Очное", "Заочное"], :selected=> @applic.participation_type) %>
        <div class="alert alert-info">
          <button type="button" class="close" data-dismiss="alert">&times;</button>
-           Перед тем как сохранить, проверьте правильность внесенных данных. После сохранения анкеты, внести изменения будет не возможно.
+           <%= t(:step2_warning) %>
        </div>
-      <%= f.submit 'Сохранить', class: "btn btn-large btn-primary", id: "Save" %>
-      <%= link_to 'Отменить', root_path, class: "btn btn-large btn-secondary" %>
+      <%= f.submit t(:save), class: "btn btn-large btn-primary", id: "Save" %>
+      <%= link_to t(:cancel), root_path, class: "btn btn-large btn-secondary" %>
     <% end %>
   </div>
 </div>
