--- a/app/views/applics/show.html.erb
+++ b/app/views/applics/show.html.erb
@@ -2,10 +2,10 @@
 <h1 id="h1_your_application_details"><%= t(:your_application_details)%></h1>
 <div class="row">
   <div class="span8 offset2 applic-form">
-    <%= link_to 'На главную', root_path, class: "btn btn-large btn-secondary", id: "btn-home" %>
+    <%= link_to t(:home_link), root_path, class: "btn btn-large btn-secondary", id: "btn-home" %>
     <%= form_for(@applic) do |f| %>
       <%= render 'shared/error_messages', object: f.object %>
-      <h3>Персональная информация</h3>
+      <h3><%= t(:personal_info) %></h3>
       <%= f.label :fio %><%= f.text_field :fio, disabled: true  %>
       <% if not_antok_member? %>
         <%= f.label :fio_eng %><%= f.text_field :fio_eng, disabled: true  %>      
@@ -15,14 +15,14 @@
       <% end %>
       <%= f.label :email %><%= f.text_field :email, disabled: true  %>
       <%= f.label :phones %><%= f.text_field :phones, disabled: true  %>   
-      <h3>Образование</h3>   
+      <h3><%= t(:education) %></h3>   
       <% if not_antok_member? %>                 
         <%= f.label :edu_institute %><%= f.text_field :edu_institute, disabled: true  %>  
         <%= f.label :edu_institute_address %><%= f.text_field :edu_institute_address, disabled: true  %>      
         <%= f.label :edu_specialization %><%= f.text_field :edu_specialization, disabled: true  %>  
       <% end %>
       <%= f.label :uch_stepen %><%= f.text_field :uch_stepen, disabled: true  %>
-      <h3>Работа</h3>
+      <h3><%= t(:work) %></h3>
       <%= f.label :work_company %><%= f.text_field :work_company, disabled: true  %>
       <% if not_antok_member? %> 
         <%= f.label :work_start_year %><%= f.text_field :work_start_year, disabled: true  %>
@@ -30,18 +30,18 @@
         <%= f.label :work_specialization %><%= f.text_field :work_specialization, disabled: true  %>
       <% end %>        
       <%= f.label :work_position %><%= f.text_field :work_position, disabled: true  %>
-      <h3>Дополнительная информация</h3>
+      <h3><%= t(:additional_info) %></h3>
       <%= f.label :antok_city %><%= f.text_field :antok_city, disabled: true  %>
       <% if not_antok_member? %> 
         <%= f.label :public_organizations %><%= f.text_field :public_organizations, disabled: true  %>
       <% end %>
-      <h3>Заявка на конференцию</h3>
+      <h3><%= t(:applicaion_info) %></h3>
       <%= f.label :science_interests %><%= f.text_area :science_interests, rows: 5, disabled: true %>
       <%= f.label :conf_topic %><%= f.text_field :conf_topic, disabled: true  %>
       <%= f.label :conf_section %><%= f.text_field :conf_section, disabled: true  %>
       <%= f.label :conf_coauthors %><%= f.text_field :conf_coauthors, disabled: true  %>
       <%= f.label :participation_type %><%= f.text_field :participation_type, disabled: true  %>
     <% end %>    
-    <%= link_to 'На главную', root_path, class: "btn btn-large btn-secondary" %>
+    <%= link_to t(:home_link), root_path, class: "btn btn-large btn-secondary" %>
   </div>
 </div>
