--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -2,7 +2,7 @@
   <div id="error_explanation">
     <div class="alert alert-error">
       <button type="button" class="close" data-dismiss="alert">&times;</button>
-      Форма содержит <%= object.errors.count %> ошибок
+      <%= object.errors.count %> <%= "error".pluralize(object.errors.count) %>
     </div>
     <ul>
     <% object.errors.full_messages.each do |msg| %>
